--- a/Projectspage.html
+++ b/Projectspage.html
@@ -8,15 +8,15 @@
          <nav>
              <ul>
                 <li>
-                    <a href="my-first-website.html">HOME
+                    <a href="my-first-website.html">HOME</a></li>
                 </li>
-                <li><a href="https://github.com/jennefercampoverde">GITHUB</li>
-                <li><a href="https://www.linkedin.com/in/jennefercampoverde/">LINKEDIN</li>
-                <li><a href="Projectspage.html">PROJECTS</li>
+                <li><a href="https://github.com/jennefercampoverde">GITHUB</a></li>
+                <li><a href="https://www.linkedin.com/in/jennefercampoverde/">LINKEDIN</a></li>
+                <li><a href="Projectspage.html">PROJECTS</a></li>
              </ul>
              </nav>
              </header>
-             <section>
+             <section class="content-section">
                  <div>
                      <Strong> AUGUST 2022</Strong>
                      &lt;&gt;
