--- a/firstpage.html
+++ b/firstpage.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html> <!--tells browser which doctype-->
 <html> <!-- tells everything is html in here -->
 <head>
-
+    <link rel="stylesheet" href="style.css"/>
 </head>
-<body>
 
-    <h1> JENNEFER CAMPOVERDE</h1>
+<header class="secondheader">
+
+</header>
+<body class="bodytotal">
+
+    <h1 class="name2"> JENNEFER CAMPOVERDE</h1>
     <br>
-    <button>
+    <button class="btn">
         Enter
     </button>
     </body>
