--- a/my-first-website.html
+++ b/my-first-website.html
@@ -4,28 +4,32 @@
 <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-     <header>
-         <nav>
+     <header class="main-header">
+         <nav class="nav main-nav">
              <ul>
-                 <li><a href="my-first-website.html">HOME</li>
-                 <li><a href="https://github.com/jennefercampoverde">GITHUB</li>
-                 <li><a href="https://www.linkedin.com/in/jennefercampoverde/">LINKEDIN</li>
-                 <li><a href="Projectspage.html">PROJECTS</li>
+                 <li><a href="my-first-website.html">HOME</a></li>
+                 <li><a href="https://github.com/jennefercampoverde">GITHUB</a></li>
+                 <li><a href="https://www.linkedin.com/in/jennefercampoverde/">LINKEDIN</a></li>
+                 <li><a href="Projectspage.html">PROJECTS</a></li>
              </ul>
          </nav>
-         <hr>
+         <h1 class="welcome-sign">Welcome</h1>
      </header>
-     <section>
-         <h2>ABOUT</h2>
+     <section class="content-section container">
+         <h2 class="section-header">ABOUT</h2>
          <p>paragraph about me</p>
-         <img src="profilepicture.png" width="400" height "500" />
+         <img class="about-image" src="profilepicture.png" width="400" height "500" />
          <p>
              more about me
          </p>
 
      </section>
-<footer>
-   
+<footer class="main-footer">
+    <div class="container main-footer-container" >
+
+    <h3 class="footer-name">Jennefer Campoverde</h3>
+    <ul class="nav foot-nav"></ul>
+ </div>
 </footer>
     </body>
 
