--- a/Projectspage.html
+++ b/Projectspage.html
@@ -8,7 +8,7 @@
          <nav>
              <ul>
                 <li>
-                    <a href="my-first-website.html">HOME</a></li>
+                    <a href="index.html">HOME</a></li>
                 </li>
                 <li><a href="https://github.com/jennefercampoverde">GITHUB</a></li>
                 <li><a href="https://www.linkedin.com/in/jennefercampoverde/">LINKEDIN</a></li>
